// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with an error  1`] = `
<DocumentFragment>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Houston we have a problem !
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot works 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
    role="alert"
  >
    <p
      class="mb-0 small"
    >
      Everything is awesome!
    </p>
  </div>
</DocumentFragment>
`;
